project3/kubernetes/api-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  containers:
    - env:
        - name: FLYWAY_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: FLYWAY_PASSWORD
              name: project-env
        - name: FLYWAY_URL
          valueFrom:
            configMapKeyRef:
              key: FLYWAY_URL
              name: project-env
        - name: FLYWAY_USER
          valueFrom:
            configMapKeyRef:
              key: FLYWAY_USER
              name: project-env
        - name: PGDATABASE
          valueFrom:
            configMapKeyRef:
              key: PGDATABASE
              name: project-env
        - name: PGHOST
          valueFrom:
            configMapKeyRef:
              key: PGHOST
              name: project-env
        - name: PGPASSWORD
          valueFrom:
            configMapKeyRef:
              key: PGPASSWORD
              name: project-env
        - name: PGPORT
          valueFrom:
            configMapKeyRef:
              key: PGPORT
              name: project-env
        - name: PGUSER
          valueFrom:
            configMapKeyRef:
              key: PGUSER
              name: project-env
        - name: POSTGRES_DB
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_DB
              name: project-env
        - name: POSTGRES_PASSWORD
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_PASSWORD
              name: project-env
        - name: POSTGRES_USER
          valueFrom:
            configMapKeyRef:
              key: POSTGRES_USER
              name: project-env
      image: api
      name: api
      ports:
        - containerPort: 3001
      resources: {}
  restartPolicy: Never
status: {}
