project3/kubernetes/flyway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: flyway
  name: flyway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: flyway
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: flyway
    spec:
      containers:
        - args:
            - -connectRetries=60
            - -baselineOnMigrate=true
            - migrate
          image: flyway/flyway:8.4.0-alpine
          name: flyway
          resources: {}
          volumeMounts:
            - mountPath: /flyway/sql
              name: flyway-claim0
      restartPolicy: Always
      volumes:
        - name: flyway-claim0
          persistentVolumeClaim:
            claimName: flyway-claim0
status: {}
