project3/kubernetes/my-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-api-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-api-app
  template:
    metadata:
      labels:
        app: my-api-app
    spec:
      containers:
        - name: my-api-app
          image: api:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3001
