project3/kubernetes/my-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-ui-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-ui-app
  template:
    metadata:
      labels:
        app: my-ui-app
    spec:
      containers:
        - name: my-ui-app
          image: ui:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
