project3/kubernetes/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: web
    spec:
      containers:
        - args:
            - nginx-debug
            - -g
            - daemon off;
          image: nginx
          name: web
          ports:
            - containerPort: 7800
          resources: {}
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              name: web-claim0
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: web-claim0
          persistentVolumeClaim:
            claimName: web-claim0
            readOnly: true
status: {}
