project3/kubernetes/my-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-api-app-service
spec:
  type: LoadBalancer
  ports:
  - port: 3001
    targetPort: 3001
    protocol: TCP
  selector:
    app: my-api-app
