project3/kubernetes/my-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-ui-app-service
spec:
  type: LoadBalancer
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: my-ui-app
