project3/kubernetes/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  ports:
    - name: "7800"
      port: 7800
      targetPort: 7800
  selector:
    io.kompose.service: web
status:
  loadBalancer: {}
